...
            <objects>
                <viewController storyboardIdentifier="BreedImagesViewController" id="22V-mz-yAU" customClass="BreedImagesViewController" customModule="DemoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4Kp-Ky-nhV">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search by breed name..." translatesAutoresizingMaskIntoConstraints="NO" id="TL8-b7-Ydd">
                                <rect key="frame" x="0.0" y="88" width="375" height="56"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                            </searchBar>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eyd-T1-0v9">
                                <rect key="frame" x="0.0" y="144" width="375" height="668"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                            <constraint firstItem="ZPB-Hi-Biu" firstAttribute="leading" secondItem="JQT-dv-0ec" secondAttribute="leading" constant="30" id="tbA-cc-Pnq"/>
                            <constraint firstAttribute="bottom" secondItem="Eyd-T1-0v9" secondAttribute="bottom" id="we7-rU-j3B"/>
                            <constraint firstItem="TL8-b7-Ydd" firstAttribute="top" secondItem="JQT-dv-0ec" secondAttribute="top" id="x0Z-l1-gkC"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="SCv-u3-4qe">
                        <barButtonItem key="rightBarButtonItem" title="Breeds" id="Tiw-wG-2XL">
                            <connections>
                                <action selector="breedsButtonTapped" destination="22V-mz-yAU" id="ypH-he-inK"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
