...
import UIKit
import TheDogSDK

class BreedImagesViewController: UIViewController {

    private struct Constants {
        static let title = "Breed Images"
        static let loadingFooterID = "loadingFooter"
        static let breedImageCellID = String(describing: BreedImageCell.self)
        static let collectionViewItemSpacing: CGFloat = 1
        static let collectionViewColumns: Int = 3
        static let loaderHeight: CGFloat = 50
    }
...
